--- a/src/layouts/ForCompanies/index.scss
+++ b/src/layouts/ForCompanies/index.scss
@@ -193,6 +193,40 @@ body {
     z-index: 10;
 }
 
+.button {
+    font-size: 1.4rem;
+    margin: 0.2rem;
+    padding: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+
+    border-style: solid;
+    border-width: 4px;
+    border-color: $melon;
+}
+
+a.button-melon {
+    background-color: $melon;
+    color: white;
+}
+
+a.button-melon:hover {
+    background-color: white;
+    color: $melon;
+    text-decoration: none;
+}
+
+a.button-white {
+    background-color: white;
+    color: $melon;
+}
+
+a.button-white:hover {
+    background-color: $melon;
+    color: white;
+    text-decoration: none;
+}
+
 @media screen and (max-width: $breakpoint-mobile) {
     .faqpage-container {
         padding: 3em 1em 0em 1em;
