--- a/src/components/FAQ/index.scss
+++ b/src/components/FAQ/index.scss
@@ -4,7 +4,7 @@
 
 .answers-wrap {
     width: 100%;
-    background-image: url("/assets/22068755_2890283657654250_15852127_o.png");
+    background-image: url('/assets/22068755_2890283657654250_15852127_o.png');
     background-size: cover;
     // object-fit: cover;
     padding-top: 10%;
