--- a/src/layouts/ForCompanies/index.scss
+++ b/src/layouts/ForCompanies/index.scss
@@ -257,8 +257,11 @@ a.button-white:hover {
     background-color: $melon;
     color: white;
     padding: 20px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     text-align: center;
+    div {
+        width: 30%;
+    }
 }
 
 .info-bar-nr {
