--- a/src/layouts/Exhibitors/index.scss
+++ b/src/layouts/Exhibitors/index.scss
@@ -13,23 +13,31 @@
 }
 
 .exhibitors-container {
+    padding: 3em 0em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     max-width: $page-width;
     margin: auto;
+}
 
-    @media screen and (max-width: $breakpoint-mobile-flipped) {
+@media screen and (max-width: $breakpoint-mobile-flipped) {
+    .exhibitors-container {
         padding: 3em 1em;
     }
 }
 
 .buttonContainer {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0;
+    justify-content: center;
     div {
-        margin: 1px;
+        flex: 1;
+        padding: 1rem;
         background-color: #f7f7f2;
-        padding: 3rem 4rem 3rem 4rem;
         color: $melon;
         text-align: center;
         border: 2px dotted $melon;
