--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -17,7 +17,7 @@
     }
 
     .menu-wrapper {
-        background-color: $licorice;
+        background-color: transparent;
         width: 100%;
         display: inline-block;
         padding: 10px 15px 10px 0px;
