--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -3,8 +3,8 @@
 
 .contact-card {
     position: relative;
-    width: 300px;
-    height: 300px;
+    width: 33vw;
+    height: 33vw;
     border-radius: 40px;
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
         -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
@@ -33,36 +33,37 @@
     }
 
     .card-title {
-        top: 210px;
-        position: absolute;
+        top: 70%;
+        //position: absolute;
         text-align: right;
         width: 100%;
-        height: 90px;
+        height: 30%;
         background-color: rgba(0, 0, 0, 0.6);
         border-radius: 0 0 40px 40px;
 
         .card-text {
-            margin: 2px 0 0 20px !important;
+            margin: -2px 0 0 24px !important;
             text-align: left;
             display: flex;
             height: 100%;
             flex-direction: column;
             justify-content: space-around;
+            font-size: 1.4vw;
 
             .card-name {
                 width: 80%;
                 color: $melon;
                 font-weight: 400;
-                font-size: 100%;
-                line-height: 24px;
+                //font-size: 100%;
+                //line-height: 24px;
                 text-align: left; //start moving away from using default text-align: justify as this breaks a lot of things
             }
 
             .title-melon {
                 color: $melon;
-                font-size: 14px;
+                //font-size: 14px;
                 margin-top: 0px;
-                line-height: 16px;
+                line-height: 2vw;
             }
 
             .linkedin-logo {
