--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -42,7 +42,8 @@
         border-radius: 0 0 40px 40px;
 
         .card-text {
-            margin: -2px 0 0 24px !important;
+            margin: -2px 0 0 26px !important;
+            padding-right: 4px;
             text-align: left;
             display: flex;
             height: 100%;
@@ -64,6 +65,7 @@
                 //font-size: 14px;
                 margin-top: 0px;
                 line-height: 2vw;
+                display: inline;
             }
 
             .linkedin-logo {
