--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -1,6 +1,16 @@
+@import '../../styles/_variables';
+@import '../../styles/_fonts';
+
 .mapBox {
     padding: 0;
-    margin: 0;
+    margin: 0 2.5vw 0 2.5vw;
     height: 100%;
-    width: 100vw;
+    width: 95vw;
+}
+
+//This is added because the navbar expands at around ipad breaking point and want to push the map down
+@media screen and (max-width: 1200px) {
+    .mapBox {
+        margin-top: 50px;
+    }
 }
