--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -14,3 +14,27 @@
         margin-top: 50px;
     }
 }
+
+.exhibitorList {
+    margin-top: 100px;
+}
+
+.leafletMap {
+    margin-top: 100px;
+}
+
+@keyframes dancingEffect {
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(-10px);
+    }
+    50% {
+        transform: translateY(10px);
+    }
+    75% {
+        transform: translateY(-10px);
+    }
+}
