--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -4,9 +4,13 @@
 .mapBox {
     padding: 0;
     margin: 0 2.5vw 0 2.5vw;
-    height: 100%;
-    width: 95vw;
-    margin-top: 100px;
+    width: 50vw;
+    margin-top: 15vh;
+    margin-bottom: 8vh;
+    .bigMap {
+        height: 100%;
+        width: 35vw;
+    }
 }
 
 //This is added because the navbar expands at around ipad breaking point and want to push the map down
