--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -3,13 +3,16 @@
 
 .mapBox {
     padding: 0;
-    margin: 0 2.5vw 0 2.5vw;
-    width: 50vw;
-    margin-top: 15vh;
+    //margin: 0 2.5vw 0 2.5vw;
+    width: 100vw;
+    height: 100%;
+    margin-top: 56px; //the default menu bar is 56px height
     margin-bottom: 8vh;
     .bigMap {
-        height: 100%;
-        width: 35vw;
+        width: 100vw;
+        padding: 0;
+        height: 70vh;
+        text-align: center;
     }
 }
 
@@ -17,6 +20,9 @@
 @media screen and (max-width: 1200px) {
     .mapBox {
         margin-top: 150px;
+        .bigMap {
+            max-height: 35vh;
+        }
     }
 }
 
