--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -7,7 +7,7 @@
     width: 100vw;
     height: 100%;
     margin-top: 56px; //the default menu bar is 56px height
-    margin-bottom: 8vh;
+    // margin-bottom: 8vh;
     .bigMap {
         width: 100vw;
         padding: 0;
