can highlight chosen exhibitor

--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -324,6 +324,7 @@
     -webkit-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
     cursor: pointer;
+    background-color: $background-color;
 }
 .exhibitor-feed .exhibitor-box .image-container {
     width: 90%;
