--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -62,7 +62,15 @@
     padding: 0.5em;
 }
 .exhibitors {
+    position: fixed;
+    top:50%;
+    left:0%;
+    width: 100%;
     padding-top: 1em;
+    height: 50vh;
+    overflow-y: auto;
+    background-color: white;
+    box-sizing: border-box;
 
     .basic-multi-select {
         width: 100%;
@@ -145,12 +153,13 @@
 }
 
 .exhibitors .search-container {
-    margin: 0em 2em 0.5em 2em;
+    margin: 0em 2em 0.5em 2em;        
     // padding: 0em 2em 0.5em 2em;
     text-align: center;
     width: 90%;
     input {
         height: 100%;
+        width: 90%;
         border: solid;
         border-width: thin;
         border-radius: 4px;
@@ -397,6 +406,10 @@
     animation: shine 2.5s infinite;
 }
 
+.hidden{
+    display: none;
+}
+
 .filter-special:hover {
     overflow: hidden;
     input[type='image']::before {
@@ -627,4 +640,20 @@
     border: solid 1px #f5f5f5;
     width: 100%;
     min-height: 300px;
+}
+
+.search-line{
+    display: flex;
+    // margin: 20px;
+    flex-direction: row;
+    margin-bottom: 2%;
+    input{
+        margin: 0em 0.5em 0em 0em;
+    }
+    // #search-button{
+    //     margin: 0em 0.5em 0em 0.5em;
+    // }
+    #filter-button{
+        margin: 0em 0em 0em 0.5em;
+    }
 }
