--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -3,12 +3,15 @@
 
 @mixin modal-container {
     padding: 1em 0em 1em 0em;
+    transform: translateY(100%);
     ul {
         padding: 0;
     }
     @media screen and (max-width: $breakpoint-mobile-flipped) {
         padding: 0.5em 0em 0.5em 0em;
     }
+    // transform: translateY(100%); /* Initially off-screen */
+    // transition: transform 0.3s ease-in-out;
 }
 
 @mixin modal-section {
@@ -20,12 +23,14 @@
 
 .popupcontainer {
     position: fixed;
+    height: 50%;
     z-index: 150;
-    top: 0em;
+    top: 50%;
     right: 0;
     bottom: 0;
     left: 0;
     overflow-y: scroll;
+
 }
 .popup {
     position: relative;
@@ -35,6 +40,7 @@
     width: 100%;
     //border-radius: 5px;
     background: white; //rgba(255, 255, 255, 0.9);
+
 
     //padding-bottom: 1em;
 }
@@ -59,7 +65,7 @@
     z-index: 9999;
     position: fixed;
     max-height: 50px;
-    top: 0px;
+    top: 50%;
     right: 3vw;
     margin-top: -5px;
     font-size: 4em;
