--- a/src/components/SubmissionForm/index.scss
+++ b/src/components/SubmissionForm/index.scss
@@ -14,6 +14,10 @@
     bottom: 0px;
     left: 20px;
     overflow-y: auto;
+    .captcha {
+        display: flex;
+        align-items: flex-end;
+    }
     .arrow {
         font-size: 30px;
     }
@@ -53,7 +57,15 @@
     }
 }
 
-@media screen and (max-width: $breakpoint-mobile-flipped) {
+@media screen and (max-width: 900px) {
+    .label {
+        input {
+            display: inline;
+            margin-left: 20px;
+            width: unset;
+        }
+    }
+
     .entireBox {
         width: 100%; /* Make the entire box take full width on smaller screens */
         left: 0; /* Reset left positioning */
@@ -84,5 +96,27 @@
         min-width: 60px;
         margin-bottom: 10px;
         margin-left: 10px;
+    }
+}
+
+@media screen and (max-height: 615px) and (min-width: 900px) {
+    .formActual {
+        display: grid;
+        justify-items: center;
+        grid-template-columns: auto auto auto;
+    }
+    .entireBox {
+        width: 90%;
+    }
+    .label {
+        padding: 0px;
+        margin-left: 10px;
+        input {
+            width: 80%;
+        }
+        textarea {
+            //width: unset;
+            height: 70%;
+        }
     }
 }
