--- a/src/components/EmailForm/index.scss
+++ b/src/components/EmailForm/index.scss
@@ -31,7 +31,7 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    margin-top: 2em;
+    //margin-top: 2em;
     resize: none;
     font-family: $font-regular;
     font-size: $body-font-size;
