Fixed countdown hiding on full screen bug

--- a/src/components/HostRecruitment/HostCountdown/index.scss
+++ b/src/components/HostRecruitment/HostCountdown/index.scss
@@ -1,6 +1,6 @@
 /* Countdown Timer Container */
 .countdown-container {
-    margin-top: 30px;
+    //margin-top: 30px; removed this by Nima, caused issues on full screen
     h2 {
         margin-bottom: 10px;
     }
