--- a/src/components/Countdown/index.scss
+++ b/src/components/Countdown/index.scss
@@ -15,7 +15,7 @@
     .countdown-width-container {
         .countdown-numbers {
             color: #fff;
-            font-weight: bold;
+            //font-weight: bold;
             font-size: calc(40px + 0.8vw);
             text-align: center;
             margin-top: 5px;
