--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -3,8 +3,8 @@
 
 .mapBox {
     position: fixed;
-    top: 50px;
-    left: 0;
+    top:0;
+    left:0;
     padding: 0;
     //margin: 0 2.5vw 0 2.5vw;
     width: 100%;
