--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -3,8 +3,8 @@
 
 .mapBox {
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     padding: 0;
     //margin: 0 2.5vw 0 2.5vw;
     width: 100%;
@@ -18,6 +18,7 @@
         height: 70vh;
         text-align: center;
     }
+    margin-top: 100px;
 }
 
 //This is added because the navbar expands at around ipad breaking point and want to push the map down
