--- a/src/components/HamburgerButton/index.scss
+++ b/src/components/HamburgerButton/index.scss
@@ -2,8 +2,8 @@
 
 .hamburger-button {
     position: relative;
-    height: 1.5em;
-    width: 1.8em;
+    height: 1.5 * 1.3em; //expanded size by a factor of 1.3 /Nima
+    width: 1.8 * 1.3em;
     cursor: pointer;
     display: block;
     -webkit-tap-highlight-color: transparent;
