--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -17,7 +17,7 @@
     }
 
     .menu-wrapper {
-        background-color: $licorice;
+        //background-color: $licorice;
         width: 100%;
         display: inline-block;
         padding: 10px 15px 10px 0px;
@@ -101,8 +101,8 @@
         .menu-wrapper {
             width: 100%;
             padding-top: 0;
-            -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
+            //-webkit-backdrop-filter: blur(10px); removed blur in sep by Nima, with new navbar redesign
+            //backdrop-filter: blur(10px);
             padding-bottom: 1em;
 
             &.visible {
@@ -125,7 +125,7 @@
                 text-align: center;
                 justify-content: space-evenly;
                 width: 100%;
-                margin-top: 3em;
+                margin-top: 2em;
 
                 @media screen and (max-width: $breakpoint-mobile) {
                     height: 100vh;
