--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -39,19 +39,6 @@
     }
 }
 
-.modalimage-exhib {
-    margin-right: 10%;
-    margin-left: 10%;
-    padding-top: 5%;
-    img {
-        width: 100%;
-    }
-}
-
-.modal-title {
-    color: $text-color-dark;
-}
-
 .purpose-text {
     text-transform: initial;
 }
@@ -139,7 +126,8 @@
 */
 
 .search {
-    padding-bottom: 1em;
+    padding-bottom: 1em;    
+    z-index: 10;
 }
 
 .filters{
@@ -153,7 +141,8 @@
 }
 
 .exhibitors .search-container {
-    margin: 0em 2em 0.5em 2em;        
+    margin: 0em 1em 0.5em 1em;        
+    z-index: 10;
     // padding: 0em 2em 0.5em 2em;
     text-align: center;
     width: 90%;
@@ -175,9 +164,12 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 568px) {
-    .search-containter input {
-        font-size: 16px !important;
-        margin: 5px 5px 5px 5px;
+    .search-container{
+        margin: 0em 1em 0.5em 1em;       
+        input {
+            font-size: 16px !important;
+            margin: 5px 5px 5px 5px;
+        }
     }
 }
 
@@ -585,7 +577,7 @@
 }
 
 @media screen and (max-width: $breakpoint-pad) {
-    .exhibitors .search-containter input {
+    .exhibitors .search-container input {
         width: 90%;
     }
 
@@ -650,9 +642,6 @@
     input{
         margin: 0em 0.5em 0em 0em;
     }
-    // #search-button{
-    //     margin: 0em 0.5em 0em 0.5em;
-    // }
     #filter-button{
         margin: 0em 0em 0em 0.5em;
     }
