--- a/src/layouts/Homepage/index.scss
+++ b/src/layouts/Homepage/index.scss
@@ -8,3 +8,87 @@
     text-align: center;
     padding: 1em;
 }
+
+.homepageInfoBox {
+    text-align: center;
+    max-width: 850px;
+    margin: auto;
+    #title {
+        color: var(--text-primary, #212121);
+        font-family: Oswald;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 72px; /* 150% */
+        letter-spacing: 0.528px;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    #subheader {
+        color: #000;
+        text-align: center;
+        font-family: Lato;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 24px; /* 133.333% */
+    }
+    #text {
+        color: #000;
+        font-family: Lato;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; /* 133.333% */
+    }
+    #buttons {
+        display: flex;
+        justify-content: space-evenly;
+        button {
+            display: inline-flex;
+            padding: 8px 36px;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            border-radius: 0;
+            border: 4px solid #00d790;
+        }
+        #b3 {
+            background: #fff;
+            color: $melon;
+        }
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .homepageInfoBox {
+        #text {
+            padding: 20px;
+        }
+        #buttons {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            gap: 0px 0px;
+            grid-template-areas:
+                'b1 b2'
+                'b3 b3';
+            height: 20vh;
+            padding: 0px 1vw 0 1vw;
+            #b1 {
+                grid-area: b1;
+                margin-right: 3vw;
+            }
+            #b2 {
+                grid-area: b2;
+                margin-left: 3vw;
+            }
+            #b3 {
+                grid-area: b3;
+            }
+            button {
+                font-size: 2.5vw;
+            }
+        }
+    }
+}
