--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -1,9 +1,11 @@
 @import '../../styles/variables';
 
+/* This entire CSS code needs to be completely refactored. A lot of the css is just contradicting itself,
+No comments are made at all. /Nima */
+
 @mixin centerer {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%, -50%);
 }
 
@@ -89,11 +91,11 @@
     flex-direction: column;
     height: 50%;
     width: 50%;
-    top: 60%;
-
+    top: 55%;
+    //Todo: change all these variable names
     #logo-container-img {
-        max-height: 90%;
-        max-width: 50%;
+        max-height: 60%;
+        //max-width: 40%; ????
         align-self: center;
         user-select: none;
         -moz-user-select: none;
