--- a/src/components/FunFact/index.scss
+++ b/src/components/FunFact/index.scss
@@ -89,5 +89,15 @@ q:after {
     text-transform: uppercase;
     font-size: 2em;
     text-align: center;
-    margin-bottom: 1%;
+    margin-bottom: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    img {
+        position: absolute;
+        right: -2%;
+        top: -80px;
+        width: 20%;
+    }
 }
