--- a/src/layouts/SustainabilityPage/index.scss
+++ b/src/layouts/SustainabilityPage/index.scss
@@ -1,27 +1,48 @@
 @import '../../styles/global';
 @import '../../styles/_variables';
 
-.sus-top-wrapper {
-    .top-icon {
-        object-fit: cover;
-        width: 50%;
-        height: 50%;
-    }
-    margin-top: 2vh;
+.top-icon {
+    //object-fit: cover;
     display: flex;
+    width: 50%;
+    height: 50%;
+    max-width: 300px;
+    margin: auto;
+}
+
+.susButtonContainer {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid gray;
+    max-width: 850px;
+    margin: auto;
+    padding-bottom: 20px;
+    button {
+        font-size: x-large;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+.sus-top-wrapper {
+    margin-top: 2vh;
     width: 100%;
-    height: 100vh;
+    max-width: 1050px;
+    margin: auto;
+    margin-top: 4vh;
+    text-align: center;
     .sustainability-top {
         background-image: url(../../../static/assets/sustainability/sustainability-top-background.png);
         background-size: cover;
         background-repeat: no-repeat;
-        height: 80%;
+        height: 100%;
+        width: 100%;
         .top-text {
             background: rgba(194, 194, 194, 0.886);
             padding: 2vw;
+            font-weight: bold;
         }
-        margin-left: 2vw;
-        padding: 3vw 1vw 0 1vw;
+        padding: 3vw 1vw 3vw 1vw;
         h1,
         h2,
         h3,
