--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -159,7 +159,7 @@ h3 {
 button {
     -webkit-appearance: none;
     font-family: $font-regular;
-    font-size: 17px;
+    font-size: 22px;
     height: 50px;
     border-radius: 25px;
     padding-left: 25px;
@@ -170,8 +170,7 @@ button {
     border: none;
     background-color: $melon;
     color: white;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
-        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     outline: none;
 
     a {
