--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -132,6 +132,7 @@
 */
 
 .search {
+    width: 100%;
     padding-bottom: 1em;
     z-index: 10;
 }
@@ -151,21 +152,35 @@
     z-index: 10;
     // padding: 0em 2em 0.5em 2em;
     text-align: center;
-    width: 90%;
-    input {
-        height: 100%;
-        width: 90%;
-        border: solid;
-        border-width: thin;
-        border-radius: 4px;
-        padding: 0.5em;
-        // width: 90%;
-        font-size: 18px;
-    }
-    input:focus {
-        outline: 0;
-        box-shadow: 0 0 4px;
-        //border: 0.15em solid #e4e4e4;
+    width: 95%;
+    .search-line {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 2%;
+        width: 100%;
+        input {
+            height: 100%;
+            width: 80%;
+            border: solid;
+            border-width: thin;
+            border-radius: 4px;
+            padding: 0.5em;
+            font-size: 18px;
+            margin: 0.5em 0.5em 0em 0em;
+        }
+        input:focus {
+            outline: 0;
+            box-shadow: 0 0 4px;
+            //border: 0.15em solid #e4e4e4;
+        }
+        #filter-button {
+            width: 10%;
+            margin: 0em 0em 0em 0.5em;
+        }
+        #questionnaire-button {
+            width: 10%;
+            margin: 0em 0em 0em 0.5em;
+        }
     }
 }
 
@@ -638,17 +653,4 @@
     border: solid 1px #f5f5f5;
     width: 100%;
     min-height: 300px;
-}
-
-.search-line {
-    display: flex;
-    // margin: 20px;
-    flex-direction: row;
-    margin-bottom: 2%;
-    input {
-        margin: 0em 0.5em 0em 0em;
-    }
-    #filter-button {
-        margin: 0em 0em 0em 0.5em;
-    }
 }
