--- a/src/components/Map/FloorButtons/index.scss
+++ b/src/components/Map/FloorButtons/index.scss
@@ -3,7 +3,7 @@
 
 .floorButtons {
     z-index: 100;
-    position: absolute;
+    position: fixed;
     display: inline-flex;
     flex-direction: column;
     align-items: flex-end;
