--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -25,15 +25,14 @@
 
 .homeIcon {
     z-index: 100;
-    position: sticky;
+    position: fixed;
     display: inline;
     #icon {
         width: 40px;
         height: 40px;
     }
-    float: right;
-    margin-right: 20px;
-    margin-top: 10px;
+    right: 10px;
+    top: 20px;
 }
 
 .loadingAnim {
@@ -43,6 +42,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    overflow: hidden;
+    overflow-y: hidden;
 }
 
 .exhibitorList {
