Added building switch, library maps,  and bug fixes on map

--- a/src/components/Map/FloorButtons/index.scss
+++ b/src/components/Map/FloorButtons/index.scss
@@ -39,3 +39,8 @@
     background-color: rgb(94, 178, 94);
     color: #fff;
 }
+
+.activeFloorButton {
+    background-color: rgb(94, 178, 94);
+    color: #fff;
+}
