--- a/src/components/Map/BuildingSwitch/index.scss
+++ b/src/components/Map/BuildingSwitch/index.scss
@@ -23,7 +23,7 @@
     }
     .buildingSwitch {
         background-color: lightgray;
-        padding: 12px;
+        padding: 6px;
         box-shadow: 2px 2px rgba(0, 0, 0, 0.414);
     }
     #nymble {
@@ -38,5 +38,6 @@
         transform: scale(1.05);
         animation: select 0.5s ease-in-out 1 normal;
         background-color: $melon;
+        font-weight: bold;
     }
 }
