Updated cursor, attempt to fix mobile api load, and added hover on buildings

--- a/src/components/Map/BuildingSwitch/index.scss
+++ b/src/components/Map/BuildingSwitch/index.scss
@@ -26,6 +26,9 @@
         padding: 6px;
         box-shadow: 2px 2px rgba(0, 0, 0, 0.414);
     }
+    .buildingSwitch:hover {
+        background-color: #35ffbc;
+    }
     #nymble {
         border-radius: 10px 0px 0px 10px;
         padding-right: 20px;
