--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 50vh;
     box-sizing: border-box;
+
     //margin-top: 56px; //the default menu bar is 56px height
     // margin-bottom: 8vh;
     .bigMap {
@@ -18,6 +19,7 @@
         height: 60vh;
         text-align: center;
         background: #dedede6a;
+        cursor: crosshair;
     }
 
     //margin-top: 56px;
