Fixed modal overlay error. Added new rectangle dev tool

--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -272,6 +272,10 @@
     font-weight: bold;
 }
 
+.notDisplay {
+    display: none !important;
+}
+
 .exhibitor-feed {
     width: 90%;
     margin-left: 2%;
