--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -3,11 +3,11 @@
 
 .contact-card {
     position: relative;
-    width: 33vw;
-    height: 33vw;
+    width: 32vw;
+    height: 40vw;
     border-radius: 40px;
-    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
-        -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+    background-color: rgba(0, 0, 0, 0.6);
+
     transition: 0.4s;
     margin-top: 25px;
     margin-bottom: 30px;
@@ -19,13 +19,15 @@
 
     .card-image {
         width: inherit;
-        height: inherit;
+        height: 75%;
         border-radius: 40px;
         background-color: gray;
+        box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
+            -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
 
         img {
             width: inherit;
-            height: inherit;
+            height: 100%;
             border-radius: 40px;
             object-fit: cover;
             object-position: top;
@@ -33,17 +35,17 @@
     }
 
     .card-title {
-        top: 70%;
-        //position: absolute;
         text-align: right;
         width: 100%;
-        height: 30%;
-        background-color: rgba(0, 0, 0, 0.6);
+        height: 25%;
+
         border-radius: 0 0 40px 40px;
 
         .card-text {
-            margin: -2px 0 0 26px !important;
+            margin: 0px 0 0 26px !important;
             padding-right: 4px;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
             text-align: left;
             display: flex;
             height: 100%;
@@ -69,13 +71,15 @@
             }
 
             .linkedin-logo {
-                bottom: 70%;
-                left: 80%;
+                bottom: 85%;
+                left: 85%;
                 position: absolute;
-                margin: 4px 10px 1px 10px;
+                padding-top: 2vw;
+                padding-right: 2vw;
+
                 text-align: right;
-                width: 18px;
-                height: 18px;
+                width: 5vw;
+                height: 5vw;
                 opacity: 0.9;
                 filter: gray;
                 -webkit-filter: grayscale(1);
@@ -99,7 +103,7 @@
     }
     .contact-card {
         width: 45vw;
-        height: 45vw;
+        height: 60vw;
     }
 }
 
@@ -112,10 +116,10 @@
     }
     .contact-card {
         width: 75vw;
-        height: 75vw;
+        height: 100vw;
     }
     .contact-card .card-title .card-text .linkedin-logo {
-        width: 30px;
-        height: 30px; //make the linkedin button bigger on tiny screens
+        width: 10vw;
+        height: 10vw; //make the linkedin button bigger on tiny screens
     }
 }
