--- a/src/components/EventList/index.scss
+++ b/src/components/EventList/index.scss
@@ -1,6 +1,23 @@
 @import '../../styles/_variables';
 @import '../../styles/_fonts';
 
+.setShowState {
+    display: flex;
+    justify-content: center;
+}
+
+.checkBoxes {
+    display: flex;
+    justify-content: space-around;
+    z-index: 100;
+}
+
+.checkBox {
+    display: flex;
+    align-items: center;
+    color: $melon;
+}
+
 .events {
     width: 100%;
     height: 100%;
@@ -12,6 +29,7 @@
     display: flex;
     flex-direction: column;
     padding: 0.5em;
+    padding-top: 0;
 }
 .event-item {
     display: flex;
