--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -1,89 +1,89 @@
-@import '../../styles/_variables';
-@import '../../styles/_fonts';
+@import "../../styles/_variables";
+@import "../../styles/_fonts";
 
 .label {
-    background-color: transparent;
-    font-size: large;
-    line-height: 1.2;
+  background-color: transparent;
+  font-size: large;
+  line-height: 1.2;
 }
 .label-small {
-    font-size: unset;
-    font-size: small;
+  font-size: unset;
+  font-size: small;
 }
 
 .mapBox {
-    position: fixed;
-    top: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0;
+  //margin: 0 2.5vw 0 2.5vw;
+  width: 100%;
+  height: 50vh;
+  box-sizing: border-box;
+
+  //margin-top: 56px; //the default menu bar is 56px height
+  // margin-bottom: 8vh;
+  .bigMap {
+    width: 100vw;
     padding: 0;
-    //margin: 0 2.5vw 0 2.5vw;
-    width: 100%;
-    height: 50vh;
-    box-sizing: border-box;
+    height: 60vh;
+    text-align: center;
+    background: #dedede6a;
+    cursor: crosshair;
+  }
 
-    //margin-top: 56px; //the default menu bar is 56px height
-    // margin-bottom: 8vh;
-    .bigMap {
-        width: 100vw;
-        padding: 0;
-        height: 60vh;
-        text-align: center;
-        background: #dedede6a;
-        cursor: crosshair;
-    }
-
-    //margin-top: 56px;
+  //margin-top: 56px;
 }
 
 .homeIcon {
-    z-index: 100;
-    position: fixed;
-    display: inline;
-    #icon {
-        width: 40px;
-        height: 40px;
-    }
-    right: 10px;
-    top: 20px;
+  z-index: 100;
+  position: fixed;
+  display: inline;
+  #icon {
+    width: 40px;
+    height: 40px;
+  }
+  right: 10px;
+  top: 20px;
 }
 
 .infoIcon {
-    top: unset;
-    top: 70px;
-    color: blue;
+  top: unset;
+  top: 70px;
+  color: blue;
 }
 
 .loadingAnim {
-    z-index: 100;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    overflow: hidden;
-    overflow-y: hidden;
+  z-index: 100;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .exhibitorList {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 .leafletMap {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 @keyframes dancingEffect {
-    0%,
-    100% {
-        transform: translateY(0);
-    }
-    25% {
-        transform: translateY(-10px);
-    }
-    50% {
-        transform: translateY(10px);
-    }
-    75% {
-        transform: translateY(-10px);
-    }
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  75% {
+    transform: translateY(-10px);
+  }
 }
