Fixed UI bugs and changed color scheme

--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -302,6 +302,8 @@
 .showmore-container {
     text-align: center;
     padding-bottom: 1em;
+    display: block;
+    width: 100%;
     .showmorebutton {
         outline: none;
         text-align: center;
