--- a/src/layouts/Homepage/index.scss
+++ b/src/layouts/Homepage/index.scss
@@ -49,6 +49,7 @@
         font-weight: 400;
         line-height: 24px; /* 133.333% */
         padding: 0 2vw 0 2vw;
+        text-align: center;
     }
     #buttons {
         display: flex;
