--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -72,8 +72,10 @@
         display: flex;
         flex-direction: column;
         .modalimage-exhib {
-            width: 30%;
-            height: 30%;
+            min-width: 80px;
+            min-height: 80px;
+            max-width: 70%;
+            max-height: 70%;
             display: block;
             margin-left: auto;
             margin-right: auto;
