Fixed disclaimer version

--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -40,7 +40,7 @@
   z-index: 1000;
   position: absolute;
   display: inline;
-  top: 435px;
+  top: 97%;
   left: 10px;
   margin-block-start: 0;
   margin-block-end: 0;
