top search bar implemented with css

--- a/src/components/Map/BuildingSwitch/index.scss
+++ b/src/components/Map/BuildingSwitch/index.scss
@@ -8,7 +8,7 @@
   flex-direction: row;
   align-items: flex-end;
   height: auto;
-  top: 2%;
+  top: 74px;
   left: 60px;
   cursor: default;
   @keyframes select {
