--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -8,6 +8,26 @@
     cursor: pointer;
 }
 
+#filter-container {
+    background-color: #f5f5f5;
+    width: 100vw;
+    padding: 5vw;
+    border-bottom: 1rem solid #00d78f;
+}
+
+#color-target {
+    background-color: white;
+}
+
+@keyframes colorflash {
+    from {
+        background-color: #00d78f;
+    }
+    to {
+        background-color: white;
+    }
+}
+
 #filter-button:hover {
     color: $melon;
 }
@@ -82,7 +102,6 @@
     padding-top: 1em;
     height: 50vh;
     overflow-y: auto;
-    background-color: white;
     box-sizing: border-box;
 
     .basic-multi-select {
@@ -155,6 +174,11 @@
 .search {
     padding-bottom: 1em;
     z-index: 10;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-top: 6px;
+    height: 42px;
 }
 
 .filters {
