--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -13,9 +13,10 @@
 
 .mapBox {
   position: fixed;
-  top: 0;
+  top: 54px;
   left: 0;
   padding: 0;
+  margin-top: 0px;
   //margin: 0 2.5vw 0 2.5vw;
   width: 100%;
   height: 50vh;
@@ -56,12 +57,12 @@
     height: 40px;
   }
   right: 10px;
-  top: 20px;
+  top: 74px;
 }
 
 .infoIcon {
   top: unset;
-  top: 70px;
+  top: 124px;
   color: blue;
 }
 
