--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -84,6 +84,7 @@
     overflow-y: auto;
     background-color: white;
     box-sizing: border-box;
+    z-index: 1000;
 
     .basic-multi-select {
         width: 100%;
