done some small experiments with icons

--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -1,6 +1,11 @@
 @import "../../styles/_variables";
 @import "../../styles/_fonts";
 
+.leaflet-marker-pane,
+.leaflet-marker-pane .custom-icon {
+  transform: none !important;
+}
+
 .label {
   background-color: transparent;
   font-size: large;
