--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -170,9 +170,8 @@
 }
 
 .exhibitors .search-container {
-    margin: 0em 1em 0em 1em;
     z-index: 10;
-    // padding: 0em 2em 0.5em 2em;
+    margin: 0em 1em 0.5em 1em;
     text-align: center;
     width: 90%;
     input {
@@ -298,10 +297,43 @@
 .exhibitor-feed {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 0em 8em 3em 8em;
+    flex-direction: column;
+    .recommended-exhibitors {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        .recommended-exhibitors-text {
+            align-items: center;
+            padding: 0em 1em 1em 1em;
+        }
+        .recommended-exhibitors-entries {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            padding: 0em 1em 3em 1em;
+        }
+    }
+    .all-exhibitors {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        .all-exhibitors-text {
+            padding: 0em 1em 1em 1em;
+            align-items: center;
+        }
+        .all-exhibitors-entries {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 0em 1em 3em 1em;
+        }
+    }
 }
 
 .Noresultsfound {
