Reorganized button files, moved homepage icon, added date api and caching

--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -125,9 +125,11 @@
 }
 
 .logo-container.fixed {
-    height: 50%;
+    height: 30%;
     width: unset;
     margin-top: -3em;
+    top: 40%;
+    left: 22.5%;
 }
 
 @media screen and (min-height: 1000px) {
